example/secondfile/objects/DHStatus_Private_Line__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BppNotificationTimeStamp__c</fullName>
        <label>Bpp Notification Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancel_PLPP_Header_Conversation_ID__c</fullName>
        <label>Cancel PLPP Header Conversation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_PLPP_Header_Message_ID__c</fullName>
        <label>Cancel PLPP Header Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommonLanguageFacilityId__c</fullName>
        <label>Common Language FacilityId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommonLanguageFacility__c</fullName>
        <label>Common Language CircuitId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Physical_Provisioning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-DHStatus-Physical Provisioning</description>
        <label>DHStatus-Physical Provisioning</label>
        <referenceTo>DHStatus_Physical_Provisioning__c</referenceTo>
        <relationshipLabel>DHStatus-Private Line</relationshipLabel>
        <relationshipName>DHStatus_Private_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <formula>DHStatus_Physical_Provisioning__r.DHStatus_Update_Deal_Hash_Details__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHStatus-Update Deal Hash Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Design</description>
        <label>Design</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Destination</description>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InEffectDate__c</fullName>
        <label>In Effect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Message ID</description>
        <label>Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <label>Message Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Number of Locations</description>
        <label>Number of Locations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Action__c</fullName>
        <label>Original Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Code__c</fullName>
        <label>Return Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Date_Time__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Sent Date Time</description>
        <label>Sent Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Slot</description>
        <label>Slot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Source System</description>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standalone_Indicator__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Standalone Indicator</description>
        <label>Standalone Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Status Description</description>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Identifier__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Status Identifier</description>
        <label>Status Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_PLFOC_Header_Conversation_ID__c</fullName>
        <label>Submit PLFOC Header Conversation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_PLFOC_Header_Message_ID__c</fullName>
        <label>Submit PLFOC Header Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_PLPP_Header_Conversation_ID__c</fullName>
        <label>Submit PLPP Header Conversation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_PLPP_Header_Message_ID__c</fullName>
        <label>Submit PLPP Header Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_A__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Term A</description>
        <label>Term A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Z__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Term Z</description>
        <label>Term Z</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Private Line-Type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Service_Order__c</fullName>
        <label>Universal Service Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Private Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>DHStatus-Private Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Private Line</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>